AsianOption/info
g++ -c asian.cpp
asian.cpp:12:64: error: member initializer 'pay_off' does not name a non-static data member or base class
AsianOptionArithmetic::AsianOptionArithmetic(PayOff* _pay_off):pay_off(_pay_off) {}
                                                               ^~~~~~~~~~~~~~~~~
asian.cpp:14:56: error: use of class template 'std::vector' requires template arguments
double AsianOptionArithmetic::pay_off_price(const std::vector& spot_prices) const
                                                       ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/vector:457:29: note: template is declared here
class _LIBCPP_TYPE_VIS_ONLY vector
                            ^
asian.cpp:23:63: error: member initializer 'pay_off' does not name a non-static data member or base class
AsianOptionGeometric::AsianOptionGeometric(PayOff* _pay_off): pay_off(_pay_off) {}
                                                              ^~~~~~~~~~~~~~~~~
asian.cpp:25:55: error: use of class template 'std::vector' requires template arguments
double AsianOptionGeometric::pay_off_price(const std::vector& spot_prices) const
                                                      ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/vector:457:29: note: template is declared here
class _LIBCPP_TYPE_VIS_ONLY vector
                            ^
4 errors generated.
make: *** [asian.o] Error 1
